0029020: Visualization, V3d_View - workaround image dump issue on Intel OpenGL driver